add Records Pattern test